Stated working on a side bar

--- a/global.side-bar.partial.html
+++ b/global.side-bar.partial.html
@@ -1,7 +1,8 @@
 <nav class="side-bar_nav">
-  <div class="side-bar_logo">
+  <ul class="side-bar_items-list">
+  <li class="side-bar_item">
     <svg
-      class="side-bar_logo_icon"
+      class="side-bar_icon"
       height="100%"
       fill="none"
       xmlns="http://www.w3.org/2000/svg"
@@ -26,11 +27,11 @@
         />
       </defs>
     </svg>
-    <span class="side-bar_logo_text">BankDash.</span>
-  </div>
-  <div class="side-bar_dashboard">
+    <span class="side-bar_text">BankDash.</span>
+  </li>
+  <li class="side-bar_item">
     <svg
-      lass="side-bar_dashboard_icon"
+      lass="side-bar_icon"
       height="100%"
       fill="currentColor"
       xmlns="http://www.w3.org/2000/svg"
@@ -40,11 +41,11 @@
         fill="#2D60FF"
       />
     </svg>
-    <span class="side-bar_dashboard_text">Dashboard</span>
-  </div>
-  <div class="side-bar_transactions">
+    <span class="side-bar_text">Dashboard</span>
+  </li>
+  <li class="side-bar_item">
     <svg
-      class="side-bar_transactions_icon"
+      class="side-bar_icon"
       height="100%"
       fill="currentColor"
       xmlns="http://www.w3.org/2000/svg"
@@ -70,11 +71,11 @@
         fill="#B1B1B1"
       />
     </svg>
-    <span class="side-bar_transactions_text">Transactions</span>
-  </div>
-  <div class="side-bar_accounts">
+    <span class="side-bar_text">Transactions</span>
+  </li>
+  <li class="side-bar_item">
     <svg
-      class="side-bar_accounts_icon"
+      class="side-bar_icon"
       height="100%"
       fill="currentColor"
       xmlns="http://www.w3.org/2000/svg"
@@ -95,11 +96,11 @@
         </clipPath>
       </defs>
     </svg>
-    <span class="side-bar_accounts_text">Accounts</span>
-  </div>
-  <div class="side-bar_investments">
+    <span class="side-bar_text">Accounts</span>
+  </li>
+  <li class="side-bar_item">
     <svg
-      class="side-bar_investments_icon"
+      class="side-bar_icon"
       height="100%"
       fill="currentColor"
       xmlns="http://www.w3.org/2000/svg"
@@ -133,11 +134,11 @@
         fill="#B1B1B1"
       />
     </svg>
-    <span class="side-bar_investments_text">Investments</span>
-  </div>
-  <div class="side-bar_credit-cards">
+    <span class="side-bar_text">Investments</span>
+  </li>
+  <li class="side-bar_item">
     <svg
-      class="side-bar_credit-cards_icon"
+      class="side-bar_icon"
       height="100%"
       fill="currentColor"
       xmlns="http://www.w3.org/2000/svg"
@@ -159,11 +160,11 @@
         fill="#B1B1B1"
       />
     </svg>
-    <span class="side-bar_credit-cards_text">Credit Cards</span>
-  </div>
-  <div class="side-bar_loans">
+    <span class="side-bar_text">Credit Cards</span>
+  </li>
+  <li class="side-bar_item">
     <svg
-      class="side-bar_loans_icon"
+      class="side-bar_icon"
       height="100%"
       fill="currentColor"
       xmlns="http://www.w3.org/2000/svg"
@@ -188,11 +189,11 @@
         </clipPath>
       </defs>
     </svg>
-    <span class="side-bar_loans_text">Loans</span>
-  </div>
-  <div class="side-bar_services">
+    <span class="side-bar_text">Loans</span>
+  </li>
+  <li class="side-bar_item">
     <svg
-      class="side-bar_services_icon"
+      class="side-bar_icon"
       height="100%"
       fill="currentColor"
       xmlns="http://www.w3.org/2000/svg"
@@ -229,11 +230,11 @@
         </clipPath>
       </defs>
     </svg>
-    <span class="side-bar_services_text">Services</span>
-  </div>
-  <div class="side-bar_my-privileges">
+    <span class="side-bar_text">Services</span>
+  </li>
+  <li class="side-bar_item">
     <svg
-      class="side-bar_my-privileges_icon"
+      class="side-bar_icon"
       height="100%"
       fill="currentColor"
       xmlns="http://www.w3.org/2000/svg"
@@ -266,11 +267,11 @@
         </clipPath>
       </defs>
     </svg>
-    <span class="side-bar_my-privileges_text">My Privileges</span>
-  </div>
-  <div class="side-bar_setting">
+    <span class="side-bar_text">My Privileges</span>
+  </li>
+  <li class="side-bar_item">
     <svg
-      class="side-bar_setting_icon"
+      class="side-bar_icon"
       height="100%"
       fill="currentColor"
       xmlns="http://www.w3.org/2000/svg"
@@ -287,6 +288,8 @@
         </clipPath>
       </defs>
     </svg>
-    <span class="side-bar_setting_text">Settings</span>
-  </div>
+    <span class="side-bar_text">Settings</span>
+  </li>
+</ul>
+<div class="overlay" id="side-overlay" ></div>
 </nav>
