Added card template

--- a/global.side-bar.partial.html
+++ b/global.side-bar.partial.html
@@ -1,10 +1,9 @@
 <nav class="side-bar_nav">
-  <ul class="side-bar_items-list">
-  <li class="side-bar_item">
+  <div class="side-bar_logo-container">
     <svg
-      class="side-bar_icon"
-      height="100%"
-      fill="none"
+      class="side-bar_logo"
+      viewBox="0 0 36 36"
+      fill="currentColor"
       xmlns="http://www.w3.org/2000/svg"
       xmlns:xlink="http://www.w3.org/1999/xlink"
     >
@@ -27,12 +26,14 @@
         />
       </defs>
     </svg>
-    <span class="side-bar_text">BankDash.</span>
-  </li>
-  <li class="side-bar_item">
+    <span class="side-bar_logo_text">BankDash.</span>
+  </div>
+  <ul class="side-bar_items-list">
+ 
+  <li class="side-bar_item side-bar_item--active">
     <svg
-      lass="side-bar_icon"
-      height="100%"
+      class="side-bar_icon"
+      viewBox="0 0 25 25"
       fill="currentColor"
       xmlns="http://www.w3.org/2000/svg"
     >
@@ -46,7 +47,7 @@
   <li class="side-bar_item">
     <svg
       class="side-bar_icon"
-      height="100%"
+      viewBox="0 0 25 25"
       fill="currentColor"
       xmlns="http://www.w3.org/2000/svg"
     >
@@ -76,7 +77,7 @@
   <li class="side-bar_item">
     <svg
       class="side-bar_icon"
-      height="100%"
+      viewBox="0 0 25 25"
       fill="currentColor"
       xmlns="http://www.w3.org/2000/svg"
     >
@@ -101,7 +102,7 @@
   <li class="side-bar_item">
     <svg
       class="side-bar_icon"
-      height="100%"
+      viewBox="0 0 25 25"
       fill="currentColor"
       xmlns="http://www.w3.org/2000/svg"
     >
@@ -139,7 +140,7 @@
   <li class="side-bar_item">
     <svg
       class="side-bar_icon"
-      height="100%"
+      viewBox="0 0 25 25"
       fill="currentColor"
       xmlns="http://www.w3.org/2000/svg"
     >
@@ -165,7 +166,7 @@
   <li class="side-bar_item">
     <svg
       class="side-bar_icon"
-      height="100%"
+      viewBox="0 0 25 25"
       fill="currentColor"
       xmlns="http://www.w3.org/2000/svg"
     >
@@ -194,7 +195,7 @@
   <li class="side-bar_item">
     <svg
       class="side-bar_icon"
-      height="100%"
+      viewBox="0 0 25 25"
       fill="currentColor"
       xmlns="http://www.w3.org/2000/svg"
     >
@@ -235,7 +236,7 @@
   <li class="side-bar_item">
     <svg
       class="side-bar_icon"
-      height="100%"
+      viewBox="0 0 25 25"
       fill="currentColor"
       xmlns="http://www.w3.org/2000/svg"
     >
@@ -272,7 +273,7 @@
   <li class="side-bar_item">
     <svg
       class="side-bar_icon"
-      height="100%"
+      viewBox="0 0 25 25"
       fill="currentColor"
       xmlns="http://www.w3.org/2000/svg"
     >
@@ -291,5 +292,5 @@
     <span class="side-bar_text">Settings</span>
   </li>
 </ul>
-<div class="overlay" id="side-overlay" ></div>
+<div class="side-bar_overlay" id="side-overlay" ></div>
 </nav>
