Added small changes

--- a/global.cards.partial.html
+++ b/global.cards.partial.html
@@ -1,8 +1,15 @@
 <section class="cards-container">
   <h1 class="cards-title">My Cards</h1>
-  <div
-    data-hx-trigger="load"
-    data-hx-swap="outerHTML"
-    data-hx-get="global.card-template.partial.html"
-  ></div>
+  <div class ="cards-carousel">
+    <div
+      data-hx-trigger="load"
+      data-hx-swap="outerHTML"
+      data-hx-get="global.card-template.partial.html"
+    ></div>
+    <div
+      data-hx-trigger="load"
+      data-hx-swap="outerHTML"
+      data-hx-get="global.card-template.partial.html"
+    ></div>
+  </div>
 </section>
