--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
         data-hx-swap="outerHTML"
         data-hx-get="global.cards.partial.html"
       ></section>
+      <section
+        data-hx-trigger="load"
+        data-hx-swap="outerHTML"
+        data-hx-get="index.recent-transaction.partial.html"
+      ></section>
     </main>
     <footer class="footer"></footer>
     <!--<script src="js/index.js"></script>-->
